# estp

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  CHANGELOG.md  LICENSE  estp.cabal  foo.estp  foo.p  foo.s  genlist.pl  hstp.cabal  inclist.pl  paper.txt  solutions.pl  test.pl
app/: Basic.hs  Check.hs  Elab.hs  Expand.hs  Lem.hs  Main.hs  Norm.hs  PP.hs  Parse.hs  Proof.hs  Prove.hs  Sat.hs  Types.hs
app/app/: Main.hs  Sat.hs  Types.hs
newalt/: ALG014+1.s  ALG015+1.s  ALG016+1.s  ALG017+1.s  ALG021+1.s  ALG022+1.s  ALG023+1.s  ALG026+1.s  ALG027+1.s  ALG036+1.s  ALG037+1.s  ALG038+1.s  ALG039+1.s  ALG043+1.s  ALG044+1.s  ALG045+1.s  ALG047+1.s  ALG048+1.s  ALG049+1.s  ALG050+1.s  ALG051+1.s  ALG052+1.s  ALG053+1.s  ALG055+1.s  ALG056+1.s  ALG057+1.s  ALG058+1.s  ALG059+1.s  ALG060+1.s  ALG061+1.s  ALG062+1.s  ALG063+1.s  ALG064+1.s  ALG065+1.s  ALG066+1.s  ALG067+1.s  ALG068+1.s  ALG090+1.s  ALG091+1.s  ALG092+1.s  (+404 more)
src/: App.hs  Appbak.hs  BT.hs  Basic.hs  Check.hs  Elab.hs  Lem.hs  Main.hs  Norm.hs  PP.hs  Parse.hs  Prove.hs  Sat.hs  Types.hs
