cabal-version:      3.6
name:               estp
version:            0.1.0.0

license:            NONE
author:             skbaek
maintainer:         seulkeebaek@gmail.com

extra-source-files: CHANGELOG.md

executable estp
  main-is:          Main.hs
  ghc-options:
    -O2
    -- -threaded
    -- -fprof-auto
    -- -prof
    -- "-with-rtsopts=-N -p -s -h -i0.1"
  other-modules: Types, Basic, PP, Parse, Sat, Lem, Norm, Prove, Elab, Expand, Check
  -- other-extensions:
  build-depends:    
    base ^>=4.14.3.0,
    hashmap,
    hashable,
    containers,
    text,
    Unique,
    process,
    strings
  hs-source-dirs:   app
  default-language: Haskell2010
