cabal-version:      3.6
name:               estp
version:            0.1.0.0

license:            NONE
author:             skbaek
maintainer:         seulkeebaek@gmail.com

extra-source-files: CHANGELOG.md

executable estp
  main-is:          Main.hs
  ghc-options:
    -O2
  other-modules: Types, Basic, PP, Parse, Sat, Lem, Norm, Prove, Elab, Check
  build-depends:    
    base ^>=4.14.3.0,
    hashmap,
    hashable,
    containers,
    text,
    time,
    Unique,
    process,
    strings
  hs-source-dirs:   app
  default-language: Haskell2010
