cabal-version:      3.6
name:               estp
version:            0.1.0.0

license:            NONE
author:             skbaek
maintainer:         seulkeebaek@gmail.com

extra-source-files: CHANGELOG.md

library
  exposed-modules: Types, Basic, PP, Parse
  build-depends:    
    base ^>=4.14.3.0,
    hashmap,
    hashable,
    containers,
    char-decode,
    bytestring >=0.11.3.1,
    bytestring-conversion,
    time,
    Unique,
    process
  hs-source-dirs:   app
  default-language: Haskell2010

executable estp
  main-is:          Main.hs
  ghc-options:
    -O2
  other-modules: Types, Basic, PP, Parse
  build-depends:    
    base ^>=4.14.3.0,
    hashmap,
    hashable,
    bytestring >=0.11.3.1,
    bytestring-conversion,
    time,
    containers,
    char-decode,
    time,
    Unique,
    process
  hs-source-dirs:   app
  default-language: Haskell2010
